--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@ html {
 
 #root {
   width: 100%;
-  height: 100%;
   background: #dbdbdb;
 }
 
